  have a __module__, but code in typeobject assumed it would always
  be there.

- Bug #952807:  Unpickling pickled instances of subclasses of
  datetime.date, datetime.datetime and datetime.time could yield insane
  objects.  Thanks to Jiwon Seo for a fix.

- Bug #845802: Python crashed when __init__.py is a directory.

Extension modules
-----------------

- Bug #1005308: Define _BSD_TYPES.

- Patch #1005568: Use _SC_PAGESIZE on Irix in resourcemoudle.

- Patch #924294: Do no check for AF_INET6 if it is not defined.

- Patch #954115: Properly handle UNC roots in nt.stat.

- Bug #841757: xmlrpclib failed on structs with Unicode keys.

- Bug #954364: inspect.getframeinfo() sometimes produces incorrect traceback
  line numbers

- Patch #909007: Enable a bunch of safe bug workarounds in OpenSSL, for
  the sake of compatibility with various broken SSL implementations.

Library
-------

- Patch #808719: Ignore locale's encoding in IDLE if it is an empty string.

- Patch #946153: Add wait_visibility before grab_set.

- Patch #994595: urllib2 now recognizes Basic authentication even if
  other authentication schemes are offered.

- Bug #993394.  A KeyError was being raised by Thread.__delete() for
  dummy_threading when called by atexit if an instance of Thread was created in
  an interpreter running in -O.  The exception was of no importance and thus is
  now thrown away if raised.

- Bug #930024: posixpath.realpath() now detects loops from symlinks and returns
  the longest path before the loop begins.

- Bug #980327/Patch #988607: ntpath now compresses extra slashes between the
  drive letter and the rest of the path properly.  Also removed ambiguity from
  UNC paths.  Thanks Paul Moore.

- Bug #679953: zipfile can now handle file sizes over 2 GB.  Previously the
  compressed and uncompressed file sizes were being stored as signed longs
  instead of unsigned as the ZIP spec specifies.
  
- Bug #981530: Fix UnboundLocalError in shutil.rmtree().  This affects